# lechefacil-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  http.rest  pyproject.toml  test_user_endpoints.py
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0221fa8fd042_add_notifications.py  06da90558885_initial_migration_2.py  15bc624cc60c_merge_heads.py  191b90d7ae01_add_health_record_table.py  1a8112216095_initial_migration.py  21f6491ff733_initial_migration_column_for_labels.py  38ed425c20f8_initial_migration_columns_for_.py  4d76d7417c55_fix_attach_unique_constraint_soft_delete.py  6249d4f36718_add_one_time_tokens_table.py  72a8da8df703_initial_migration.py  75f4082d1def_add_animal_statuses_table_and_update_.py  8e5a2a1d9c3b_add_units_to_tenant_configs.py  9c3d1b2a6a10_add_breeds_and_lots_and_fk_columns.py  a1b2c3d4e5f6_add_reproduction_tables.py  a4ce84757ed3_initial_migration_lactations_events_.py  a7b8c9d0e1f2_add_pairing_pin_to_scale_devices.py  b2c3d4e5f6a7_migrate_service_events_to_inseminations.py  b7cc0b57c42a_add_price_fields_to_milk_productions.py  ba7f3a1c1b20_add_breed_variant_to_animals.py  c0a6f86862f8_add_enum_to_attachements.py  c1a2b3d4e5f6_add_shift_and_unique_per_day_turn.py  (+7 more)
alembic2/: README  env.py  script.py.mako
docs/: api-guidelines.md  architecture.md
docs/openapi/: schema.json
infra/: main.tf  outputs.tf  variables.tf
scripts/: create_tenant.py  export_openapi.sh  run_dev.sh  start.sh
src/: app.py
terraform/: README.md  outputs.tf  providers.tf  variables.tf  versions.tf
tests/: conftest.py
(+259 files in other folders)
